# how-to-build-an-agent

./: .gitignore  README.md  agent.py  pyproject.toml  test_integration.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_refactoring.py
tools/: __init__.py  base.py  code_tools.py  execution.py  file_ops.py  integration.py  interactive.py
